--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
     "@sequelize/mysql": "^7.0.0-alpha.43",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
